# snaplet-saml

./: .gitignore  snaplet-saml.cabal
config/: certificate.pem  devel.cfg  idp.xml  key.pem
config/sp/: sp.xml
src/Data/X509/: IO.hs
src/Network/SAML/: Assertion.hs  Common.hs  Message.hs  Metadata.hs  Protocol.hs  Types.hs
src/Network/SAML/Protocol/: IDP.hs  SP.hs
src/Snap/Snaplet/: SAML.hs
src/Snap/Snaplet/SAML/: Binding.hs  Common.hs  Config.hs  IDP.hs  SP.hs
src/Snap/Snaplet/SAML/Binding/: POST.hs  Redirect.hs
src/Text/Blaze/SAML/: Assertion.hs  Metadata.hs  Protocol.hs
src/Text/Blaze/XML/: Signature.hs
src/Text/XML/: Signature.hs
