name:           snaplet-saml
version:        0.1
synopsis:       Integrate your Snap application with a SAML IdP or SP
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Web
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/snaplet-saml
bug-reports:    https://github.com/duairc/snaplet-saml/issues

extra-source-files:
  LICENSE

data-files:
  config/devel.cfg
  config/idp.xml
  config/sp/sp.xml
  config/certificate.pem
  config/key.pem

library
  hs-source-dirs:
    src

  exposed-modules:
    Snap.Snaplet.SAML.Common
    Snap.Snaplet.SAML.IDP
    Snap.Snaplet.SAML.SP

  other-modules:
    Data.X509.IO
    Network.SAML.Common
    Network.SAML.Message
    Network.SAML.Metadata
    Network.SAML.Protocol.IDP
    Network.SAML.Protocol.SP
    Network.SAML.Types
    Snap.Snaplet.SAML.Binding
    Snap.Snaplet.SAML.Binding.POST
    Snap.Snaplet.SAML.Binding.Redirect
    Snap.Snaplet.SAML.Config
    Text.Blaze.SAML.Assertion
    Text.Blaze.SAML.Metadata
    Text.Blaze.SAML.Protocol
    Text.Blaze.XML.Signature
    Text.XML.Signature
    Paths_snaplet_saml

  build-depends:
    asn1-encoding,
    asn1-types,
    base < 5,
    base64-bytestring,
    blaze-html,
    blaze-markup,
    bytestring,
    configurator,
    cryptonite,
    deepseq,
    directory,
    filepath,
    hashable,
    insert-ordered-containers,
    layers,
    lens,
    modern-uri,
    mtl,
    pem,
    process,
    random,
    resource,
    snap,
    snap-core,
    text,
    time,
    timeoutmap,
    transformers,
    unordered-containers,
    x509 >= 1.7.4,
    xml-conduit,
    zlib

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/snaplet-saml.git
